# crazyKhoreia

./: .gitmodules  README.md  setup.cfg
src/crazyKhoreia/: _3DIoU.py  crazyKhoreia.py  lightPainting.py  multiDronFormation.py  multiDroneFormation.py
