[metadata]
name = crazyKhoreia
version = 0.0.3
author = Santiago Restrepo Garcia
author_email = sanrega24@gmail.com
description = Python package for the crazyKhoreia project.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/santiagorg2401/crazyKhoreia
project_urls =
    Bug Tracker = https://github.com/santiagorg2401/crazyKhoreia/issues
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    cycler
    matplotlib
    numpy
    opencv_python
    scikit_learn
    scipy
    
[options.packages.find]
where = src